fix build errors

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@ant-design/colors": "^7.2.1",
+    "@reduxjs/toolkit": "^2.9.0",
     "antd": "^5.27.4",
     "luxon": "^3.7.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
